syncing samples after recent "API refresh"