@@ -50,7 +50,8 @@ public class ASTPrinter {
         try (var scope = ResourceScope.newConfinedScope()) {
             // parse the C header/source passed from the command line
             var index = clang_createIndex(0, 0);
-            var tu = clang_parseTranslationUnit(index, scope.allocateUtf8String(args[0]),
+            var allocator = SegmentAllocator.newNativeArena(scope);
+            var tu = clang_parseTranslationUnit(index, allocator.allocateUtf8String(args[0]),
                     NULL, 0, NULL, 0, CXTranslationUnit_None());
             // array trick to update within lambda
             var level = new int[1];
