@@ -30,6 +30,7 @@
  */
 
 import jdk.incubator.foreign.ResourceScope;
+import jdk.incubator.foreign.SegmentAllocator;
 import org.openjdk.*;
 import static jdk.incubator.foreign.MemoryAddress.NULL;
 import static org.openjdk.jimage_h.*;
@@ -38,12 +39,13 @@ public class JImageFile {
     public static void main(String[] args) {
         String javaHome = System.getProperty("java.home");
         try (var scope = ResourceScope.newConfinedScope()) {
-            var jintResPtr = scope.allocate(jint);
-            var moduleFilePath = scope.allocateUtf8String(javaHome + "/lib/modules");
+            var allocator = SegmentAllocator.newNativeArena(scope);
+            var jintResPtr = allocator.allocate(jint);
+            var moduleFilePath = allocator.allocateUtf8String(javaHome + "/lib/modules");
             var jimageFile = JIMAGE_Open(moduleFilePath, jintResPtr);
 
             var mod = JIMAGE_PackageToModule(jimageFile,
-                scope.allocateUtf8String("java/util"));
+                allocator.allocateUtf8String("java/util"));
             System.out.println(mod);
 
             // const char* module_name, const char* version, const char* package,
