@@ -30,6 +30,7 @@
  */
 
 import jdk.incubator.foreign.ResourceScope;
+import jdk.incubator.foreign.SegmentAllocator;
 import static jdk.incubator.foreign.MemoryAddress.NULL;
 // import jextracted python 'header' class
 import static org.python.Python_h.*;
@@ -41,7 +42,8 @@ public class PythonMain {
 
         Py_Initialize();
         try (var scope = ResourceScope.newConfinedScope()) {
-            var str = scope.allocateUtf8String(script);
+            var allocator = SegmentAllocator.newNativeArena(scope);
+            var str = allocator.allocateUtf8String(script);
             PyRun_SimpleStringFlags(str, NULL);
             Py_Finalize();
         }
